2002-04-20  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes): Set type to downcase.

2002-04-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-news-headers): Add
	SUBJECT to BODY if SUBJECT contains a link.

2002-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-header): Don't use `make-string' to make a
	separator text under Mule.

2002-04-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Support w3m-bitmap.el when
	retrieve `cid image' (Mew cache has multibyte strings, but work
	buffer is unibyte).

2002-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (TopLevel): Not to get the byte-code for
	`current-column' inlined under old Emacsen.

	* w3m-bitmap.el (w3m-bitmap-emacs-broken-p): Use
	`ad-Orig-current-column' rather than `current-column' if it has
	already been defined.
	(TopLevel): Not to get the byte-code for `current-column' inlined
	under the broken Emacsen in case when compiling manually.

2002-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (TopLevel) Require `cl' and possibly load cl-macs.
	The following changes are for old Emacsen.
	(w3m-bitmap-emacs-broken-p): New constant.
	(TopLevel): Warn if Emacs has a bug on managing column numbers.
	(w3m-bitmap-move-to-column): Allow the 3rd arg `strictly'; don't
	modify the buffer contents unless the 3rd arg has been set.
	(w3m-bitmap-defadvice-if-broken): New macro; use it to advise the
	functions `current-column', `move-to-column',
	`move-to-column-force', `next-line' and `previous-line' to work
	under the broken Emacsen.
	(w3m-bitmap-byte-indexed-characters-p): Remove.
	(TopLevel): Don't alias `w3m-bitmap-current-column' to
	`current-column'; don't alias `w3m-bitmap-move-to-column-force' to
	`move-to-column-force'.
	(w3m-bitmap-substitute-key-definitions): Remove.
	(w3m-bitmap-image-insert): Replace `w3m-bitmap-current-column'